# awkernel

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  Makefile  PUBLICATIONS.md  README.html  README.md  SPEC_TEST.md  VERIFICATION.md  VFS_REGISTRY_IMPLEMENTATION.md  aarch64-custom.json  aarch64-debug.gdb  aarch64-kernel.json  aarch64-link-bsp.lds  aarch64-link.lds  igc_roadmap.md  improve_nw.md  rv32-link.lds  safe_dd.sh  sudo  x86-debug.gdb  x86_64-custom.json  x86_64-kernel.json  x86_64-link.lds
affinity_btree_queue/: Cargo.toml  README.md
affinity_btree_queue/src/: lib.rs  tests.rs
applications/autoware/: Cargo.toml  build.rs
applications/autoware/command_gate/: Cargo.toml
applications/autoware/common_types/: Cargo.toml
applications/autoware/ekf_localizer/: Cargo.toml
applications/autoware/gyro_odometer/: Cargo.toml
applications/autoware/imu_corrector/: Cargo.toml
applications/autoware/imu_driver/: Cargo.toml
applications/autoware/localization_types/: Cargo.toml
applications/autoware/src/: lib.rs
applications/autoware/stop_filter/: Cargo.toml
applications/autoware/trajectory_follower/: Cargo.toml
applications/autoware/twist2accel/: Cargo.toml
applications/autoware/vehicle_velocity_converter/: Cargo.toml
applications/awkernel_services/: Cargo.toml
applications/awkernel_services/src/: buffered_logger.rs  filesystem_service.rs  lib.rs  memory_fatfs_service.rs  network_service.rs  storage_service.rs
applications/awkernel_shell/: Cargo.toml
applications/awkernel_shell/src/: lib.rs  ping.rs  udp.rs
applications/awkernel_ydlidar_driver/: Cargo.toml
applications/awkernel_ydlidar_driver/src/: lib.rs
applications/measure_channel_heavy/: Cargo.toml
applications/rd_gen_to_dags/: Cargo.toml
applications/rd_gen_to_dags/DAGs/: dag_0.yaml
applications/rd_gen_to_dags/src/: build_dag.rs  lib.rs  parse_yaml.rs  time_unit.rs
applications/test_rpi_hal/: Cargo.toml
applications/test_rpi_hal/src/: lib.rs
applications/tests/test_autoware/: Cargo.toml  imu_raw.csv  velocity_status.csv
applications/tests/test_dvfs/: Cargo.toml
applications/tests/test_nvme/: Cargo.toml
applications/tests/test_nvme_fatfs_rw/: Cargo.toml
applications/velodyne_icp/: Cargo.toml
applications/velodyne_icp/src/: lib.rs
awkernel_async_lib/: Cargo.toml
awkernel_async_lib/src/: accepter.rs  action.rs  anydict.rs  channel.rs  dag.rs  delay.rs  delta_list.rs  file.rs  future.rs  lib.rs  mini_task.rs  net.rs  never_return.rs  preempt.rs  pubsub.rs  ringq.rs  scheduler.rs  service.rs  session_types.rs  shell.rs  sleep_task.rs  sync.rs  task.rs  time.rs  time_interval.rs  timeout_call.rs  utils.rs  yield_task.rs
awkernel_async_lib/src/channel/: bounded.rs  unbounded.rs
awkernel_async_lib/src/dag/: graph.rs  performance.rs  unionfind.rs  visit.rs
awkernel_async_lib/src/file/: async_mount_manager.rs  fatfs.rs  filesystem.rs  mount.rs  mount_aware_vfs_path.rs  path.rs
awkernel_async_lib/src/net/: tcp.rs  udp.rs
awkernel_async_lib/src/scheduler/: clustered_edf.rs  fifo.rs  gedf.rs  panicked.rs  partitioned_edf.rs  partitioned_gedf.rs  prioritized_fifo.rs  prioritized_fifo_fordag.rs  prioritized_lifo.rs  prioritized_round_robin.rs  prioritized_rr.rs  priority_based_rr.rs  random_sched.rs  round_robin.rs  rr.rs
awkernel_async_lib/src/sync/: barrier.rs  mutex.rs
awkernel_async_lib/src/task/: preempt.rs  trace.rs
awkernel_drivers/: Cargo.toml
awkernel_drivers/src/: Interrupt_controler.rs  clock.rs  device.rs  framebuffer.rs  hal.rs  ic.rs  if_media.rs  interrupt_controler.rs  interrupt_controller.rs  lib.rs  mii.rs  net.rs  pcie.rs  psci.rs  raspi5.rs  rtc.rs  uart.rs
awkernel_drivers/src/Interrupt_controler/: raspi3_irq_controler.rs
awkernel_drivers/src/framebuffer/: lfb.rs  mbox.rs  rpi.rs
awkernel_drivers/src/hal/: i2c.rs  rpi.rs
awkernel_drivers/src/ic/: genet.rs  raspi.rs  x86_64.rs
awkernel_drivers/src/interrupt_controler/: bcm2835.rs  gicv2.rs  gicv3.rs
awkernel_drivers/src/interrupt_controller/: apic.rs  bcm2835.rs  gicv2.rs  gicv3.rs
awkernel_drivers/src/mii/: physubr.rs  ukphy.rs
awkernel_drivers/src/net/: _ring.rs  e1000.rs  e1000e.rs  ether.rs  mbuf.rs  ping.py  ring.rs
awkernel_drivers/src/pcie/: base_address.rs  broadcom.rs  capability.rs  config_space.rs  intel.rs  msi.rs  msix.rs  net.rs  nvme.rs  pcie_class.rs  pcie_device_tree.rs  pcie_id.rs  raspi.rs  virtio.rs
awkernel_drivers/src/raspi5/: raspi5_gpio.rs  raspi5_pcie_bridge.rs  raspi5_uart.rs
awkernel_filesystem/: Cargo.toml
awkernel_filesystem/src/: lib.rs
awkernel_lib/: Cargo.toml  build.rs
awkernel_lib/src/: addr.rs  allocator.rs  arch.rs  barrier.rs  config.rs  console.rs  context.rs  cpu.rs  delay.rs  device_tree.rs  dma_map.rs  dma_pool.rs  dvfs.rs  file.rs  file_control.rs  graphics.rs  heap.rs  heap_util.rs  interrupt.rs  lib.rs  local_heap.rs  logger.rs  memory.rs  mmio.rs  net.rs  ntp.rs  paging.rs  priority_queue.rs  sanity.rs  select.rs  serial.rs  static_alloc.rs  storage.rs  sync.rs  time.rs  time_eval.rs  timer.rs  unwind.rs
awkernel_lib/tests/: model_check_mcslock.rs  model_check_rwlock.rs
gyro_odometer/: Cargo.toml
gyro_odometer/src/: lib.rs
imu_corrector/: Cargo.toml
imu_corrector/src/: lib.rs
kernel/: Cargo.toml
kernel/asm/: boot.S
kernel/ld/: aarch64-link-bsp.lds  aarch64-link.lds  rv32-link.lds  rv64-link.lds  x86_64-link.lds
kernel/src/: arch.rs  async_lib.rs  board_info.rs  config.rs  delay.rs  delta_list.rs  heap.rs  kernel_info.rs  logger.rs  main.rs  mmio.rs  nostd.rs  rapl_monitor.rs  scheduler.rs  task.rs  x86_64.rs
t4os_async_lib/: Cargo.toml
t4os_async_lib/src/: action.rs  anydict.rs  channel.rs  delay.rs  join_handle.rs  lib.rs  mini_task.rs  pubsub.rs  ringq.rs  scheduler.rs  service.rs  session_types.rs  task.rs  timeout_call.rs  yield_task.rs
t4os_lib/: Cargo.toml
t4os_lib/src/: arch.rs  delay.rs  lib.rs  mmio.rs
userland/: Cargo.toml
userland/src/: lib.rs
vehicle_velocity_converter/: Cargo.toml
vehicle_velocity_converter/src/: lib.rs
x86bootdisk/: Cargo.toml
x86bootdisk/src/: main.rs
(+2201 files in other folders)
