[package]
name = "awkernel_async_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "1"
log = "0.4"

[dependencies.futures]
version = "0.3"
default-features = false
features = ["alloc", "async-await", "cfg-target-has-atomic"]

[dependencies.unwinding]
version = "0.1"
default-features = false
features = ["panic"]

[dependencies.awkernel_lib]
path = "../awkernel_lib"
default-features = false

[dependencies.awkernel_async_lib_verified]
path = "../awkernel_async_lib_verified"

[features]
default = []
std = ["awkernel_lib/std"]
