[package]
name = "awkernel_async_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "1"
log = "0.4"
array-macro = "2.1"

[dependencies.futures]
git = "https://github.com/ytakano/futures-rs.git"
# version = "0.3"
default-features = false
features = ["alloc", "async-await"]

[dependencies.awkernel_lib]
path = "../awkernel_lib"
default-features = false

[dependencies.awkernel_async_lib_verified]
path = "../awkernel_async_lib_verified"

[dependencies.runtime_verification]
path = "../runtime_verification"
default-features = false
optional = true

[dependencies.smoltcp]
path = "../smoltcp"
default-features = false
features = [
    "alloc",
    "async",
    "log",
    "socket-udp",
    "socket-tcp",
    "proto-ipv4",
    "proto-ipv6",
    "socket-icmp",
    "medium-ethernet",
    "proto-igmp",
]

[features]
default = []
std = ["awkernel_lib/std", "no_preempt"]
no_preempt = []
spinlock = ["awkernel_lib/spinlock"]
clippy = []
runtime_verification = ["dep:runtime_verification"]
perf = []
