[package]
name = "awkernel_drivers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bitflags = "2.3"
embedded-hal = "1.0.0-rc.3"
embedded-hal-nb = "1.0.0-rc.3"
embedded-graphics-core = "0.4.0"
array-macro = "2.1"

[dependencies.x86_64]
version = "0.14"
optional = true

[dependencies.acpi]
# version = "5.0"
git = "https://github.com/ytakano/acpi.git"
optional = true

[dependencies.awkernel_lib]
path = "../awkernel_lib"
default-features = false

[dependencies.awkernel_aarch64]
path = "../awkernel_aarch64"
optional = true

[dependencies.smoltcp]
version = "0.10.0"
default-features = false
features = [
    "alloc",
    "log",
    "socket-udp",
    "socket-tcp",
    "proto-ipv4",
    "proto-ipv6",
    "medium-ethernet",
]

[features]
default = []
x86 = ["awkernel_lib/x86", "dep:acpi", "dep:x86_64", "all_device"]
rv32 = ["awkernel_lib/rv32"]
aarch64 = ["awkernel_lib/aarch64", "dep:awkernel_aarch64"]
raspi = []
spinlock = ["awkernel_lib/spinlock"]
std = ["awkernel_lib/std"]

# Devices
all_device = ["igb"]
igb = []
