[package]
name = "awkernel_drivers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bitflags = "2.3"
embedded-graphics-core = "0.4"
embedded-graphics = "0.8"
array-macro = "2.1"

[dependencies.rand]
version = "0.9"
features = ["small_rng"]
default-features = false
optional = true

[dependencies.x86_64]
version = "0.15"
optional = true

[dependencies.memoffset]
version = "0.9"
optional = true

[dependencies.embedded-hal]
version = "1.0"
optional = true

[dependencies.embedded-hal-nb]
version = "1.0"
optional = true

[dependencies.acpi]
# version = "5.0"
git = "https://github.com/ytakano/acpi.git"
optional = true

[dependencies.awkernel_lib]
path = "../awkernel_lib"
default-features = false

[dependencies.awkernel_async_lib_verified]
path = "../awkernel_async_lib_verified"

[dependencies.awkernel_aarch64]
path = "../awkernel_aarch64"
optional = true

[dependencies.bootloader_api]
version = "0.11"
optional = true

[dependencies.smoltcp]
path = "../smoltcp"
default-features = false
features = [
    "alloc",
    "async",
    "log",
    "socket-udp",
    "socket-tcp",
    "proto-ipv4",
    "proto-ipv6",
    "medium-ethernet",
    "proto-igmp",
]

[features]
default = []
x86 = ["awkernel_lib/x86", "dep:acpi", "dep:x86_64", "dep:bootloader_api"]
rv32 = ["awkernel_lib/rv32"]
aarch64 = [
    "awkernel_lib/aarch64",
    "dep:awkernel_aarch64",
    "dep:embedded-hal",
    "dep:embedded-hal-nb",
]
spinlock = ["awkernel_lib/spinlock"]
std = ["awkernel_lib/std"]

# Documentation
doc = ["awkernel_lib/aarch64", "raspi", "all_device"]

# Devices
all_device = ["all_pcie", "pl011", "uart_16550", "pcie", "raspi"]
raspi = ["genet"]

## UART
pl011 = []
uart_16550 = []

## Ethernet
mii = []        # Media Independent Interface
genet = ["mii"] # Broadcom GENET for Raspberry Pi

## PCIe
pcie = []
all_pcie = [
    "pcie",
    "igb",
    "ixgbe",
    "igc",
    "rp1",
    "bcm2712",
    "virtio-net",
    "virtio-blk",
]
igb = ["dep:memoffset"] # Intel Gigabit Ethernet
igc = [] # Intel 2.5 Gigabit Ethernet
ixgbe = ["dep:rand"] # Intel 10 Gigabit Ethernet
rp1 = [] # RP1 of Raspberry Pi 5
bcm2712 = [] # Broadcom BCM2712 for Raspberry Pi 5
virtio-net = [] # VirtIO Network Card
virtio-blk = [] # VirtIO Block Device
