[package]
name = "awkernel_filesystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bitflags = "2.3"

[dependencies.awkernel_sync]
git = "https://github.com/tier4/awkernel_sync.git"

[dependencies.awkernel_async_lib_verified]
path = "../awkernel_async_lib_verified"

[dependencies.awkernel_lib]
path = "../awkernel_lib"

[features]