[package]
name = "awkernel_filesystem" #fatfs
version = "0.1.0"
edition = "2021"
authors = ["Rafał Harabień <rafalh92@outlook.com>"]
repository = "https://github.com/rafalh/rust-fatfs"
readme = "README.md"
keywords = ["fat", "filesystem", "no_std"]
categories = ["filesystem"]
license = "MIT"
description = """
FAT filesystem library.
"""
exclude = [
    "resources/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bitflags = "2.3"
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }

[dependencies.awkernel_sync]
git = "https://github.com/tier4/awkernel_sync.git"

[dependencies.awkernel_async_lib_verified]
path = "../awkernel_async_lib_verified"

[dependencies.awkernel_lib]
path = "../awkernel_lib"

[features]
# Use Rust std library
std = []
# LFN (Long File Name) support
lfn = []
# Use dynamic allocation. When used without std please enable core_io/collections
alloc = []
# Full Unicode support. Disabling it reduces code size by avoiding Unicode-aware character case conversion
unicode = []
# Enable only error-level logging
log_level_error = []
# Enable logging levels warn and up
log_level_warn  = ["log_level_error"]
# Enable logging levels info and up
log_level_info  = ["log_level_warn"]
# Enable logging levels debug and up
log_level_debug = ["log_level_info"]
# Enable all logging levels: trace and up
log_level_trace = ["log_level_debug"]
