[package]
name = "awkernel_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rlsf = "0.2"
bitflags = "2.3"
array-macro = "2.1"
embedded-graphics-core = "0.4"
embedded-graphics = "0.8"

[dependencies.awkernel_sync]
path = "../awkernel_sync"

[dependencies.awkernel_async_lib_verified]
path = "../awkernel_async_lib_verified"

[dependencies.libc]
version = "0.2"
optional = true

[dependencies.x86_64]
version = "0.14"
optional = true

[dependencies.riscv]
version = "0.11.1"
optional = true

[dependencies.acpi]
# version = "5.0"
git = "https://github.com/ytakano/acpi.git"
optional = true

[dependencies.bootloader_api]
version = "0.11"
optional = true

[dependencies.awkernel_aarch64]
path = "../awkernel_aarch64"
optional = true

[dependencies.unwinding]
# version = "0.2"
git = "https://github.com/nbdd0121/unwinding.git"
default-features = false
features = ["panic"]

[dependencies.smoltcp]
path = "../smoltcp"  # プロジェクトルートからの相対パス
default-features = false
features = [
    "alloc",
    "async",
    "log",
    "socket-udp",
    "socket-tcp",
    "proto-ipv4",
    "proto-ipv6",
    "socket-icmp",
    "medium-ethernet",
    "proto-igmp",
]
version = "0.11.0"
#path = "/home/awkernel/.cargo/registry/src/index.crates.io-6f17d22bba15001f/smoltcp-0.11.0"

[features]
default = ["x86"]
x86 = ["dep:x86_64", "dep:acpi", "dep:bootloader_api", "awkernel_sync/x86"]
aarch64 = ["dep:awkernel_aarch64", "awkernel_sync/aarch64"]
rv32 = []
rv64 = ["awkernel_sync/rv64"]
std = ["dep:libc", "awkernel_sync/std"]
spinlock = ["awkernel_sync/spinlock"]
