[package]
name = "awkernel_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rlsf = "0.2"
bitflags = "2.3"
array-macro = "2.1"
embedded-graphics-core = "0.4"
embedded-graphics = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
#once_cell = { version = "1.21", default-features = false }


[dependencies.awkernel_sync]
git = "https://github.com/tier4/awkernel_sync.git"

[dependencies.awkernel_async_lib_verified]
path = "../awkernel_async_lib_verified"

[dependencies.libc]
version = "0.2"
optional = true

[dependencies.riscv]
version = "0.11.1"
optional = true

[dependencies.x86_64]
version = "0.15"
optional = true

[dependencies.acpi]
# version = "5.0"
git = "https://github.com/ytakano/acpi.git"
optional = true

[dependencies.bootloader_api]
version = "0.11"
optional = true

[dependencies.awkernel_aarch64]
path = "../awkernel_aarch64"
optional = true

[dependencies.unwinding]
version = "0.2"
# git = "https://github.com/nbdd0121/unwinding.git"
default-features = false
features = ["panic"]

[dependencies.socket2]
version = "0.5"
optional = true

[dependencies.smoltcp]
path = "../smoltcp"
default-features = false
features = [
    "alloc",
    "async",
    "log",
    "socket-udp",
    "socket-tcp",
    "proto-ipv4",
    "proto-ipv6",
    "socket-icmp",
    "medium-ethernet",
    "proto-igmp",
]

[features]
default = ["x86"]
x86 = [
    "dep:x86_64",
    "dep:acpi",
    "dep:bootloader_api",
    "awkernel_sync/x86",
    "awkernel_sync/x86_mwait",
]
aarch64 = ["dep:awkernel_aarch64", "awkernel_sync/aarch64"]
rv32 = ["dep:riscv", "awkernel_sync/rv32"]
rv64 = ["awkernel_sync/rv64"]
std = ["dep:libc", "dep:socket2", "awkernel_sync/std"]
spinlock = ["awkernel_sync/spinlock"]
# LFN (Long File Name) support
lfn = []
# Full Unicode support. Disabling it reduces code size by avoiding Unicode-aware character case conversion
unicode = []

[dev-dependencies]
env_logger = "0.11.8"
fscommon = "0.1"