[package]
name = "imu_corrector"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
nalgebra = { version = "0.32", default-features = false, features = ["libm"] }
awkernel_async_lib = { path = "../awkernel_async_lib", default-features = false }
awkernel_lib = { path = "../awkernel_lib", default-features = false } 
imu_driver = { path = "../imu_driver", default-features = false }