[package]
name = "awkernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bitflags = "2.3"
embedded-hal = "1.0.0"
embedded-graphics-core = "0.4"
embedded-graphics = "0.8"

[dependencies.unwinding]
# version = "0.2"
git = "https://github.com/ytakano/unwinding.git"
default-features = false
optional = true
features = ["unwinder", "panic", "personality", "fde-static"]

[dependencies.acpi]
# version = "5.0"
git = "https://github.com/ytakano/acpi.git"
optional = true

[dependencies.libc]
version = "0.2"
optional = true

[dependencies.userland]
path = "../userland"

[dependencies.awkernel_async_lib]
path = "../awkernel_async_lib"
default-features = false

[dependencies.awkernel_lib]
path = "../awkernel_lib"
default-features = false

[dependencies.awkernel_drivers]
path = "../awkernel_drivers"
default-features = false

[dependencies.awkernel_aarch64]
path = "../awkernel_aarch64"
optional = true

[dependencies.x86_64]
version = "0.15"
optional = true

[dependencies.bootloader_api]
version = "0.11"
optional = true

[dependencies.ns16550a]
version = "0.4.0"
optional = true

[features]
default = ["raspi"]
no_std_unwinding = ["dep:unwinding"]
x86 = [
    "no_std_unwinding",
    "awkernel_lib/x86",
    "dep:x86_64",
    "dep:bootloader_api",
    "dep:acpi",
    "awkernel_drivers/x86",
    "awkernel_drivers/all_pcie",
    "awkernel_drivers/uart_16550",
]
rv32 = [
    "no_std_unwinding",
    "awkernel_lib/rv32",
    "dep:ns16550a",
    "awkernel_drivers/rv32",
]
std = ["awkernel_lib/std", "awkernel_async_lib/std", "dep:libc"]
aarch64 = [
    "no_std_unwinding",
    "dep:awkernel_aarch64",
    "awkernel_lib/aarch64",
    "awkernel_drivers/aarch64",
]
raspi = [
    "aarch64",
    "awkernel_drivers/raspi",
    "awkernel_drivers/pl011",
    "userland/raspi",
]

raspi5 = ["aarch64", "awkernel_drivers/pl011"]


aarch64_virt = [
    "aarch64",
    "awkernel_drivers/all_pcie",
    "awkernel_drivers/pl011",
]
spinlock = ["awkernel_lib/spinlock"]
linux = []
