[package]
name = "t4os_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

[dependencies.libc]
version = "0.2"
optional = true

[target.'cfg(target_arch = "aarch64")'.dependencies]
t4os_aarch64 = { path = "../t4os_aarch64" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14"
acpi = "4.1"
bootloader_api = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
