[package]
name = "userland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

[dependencies.awkernel_async_lib]
path = "../awkernel_async_lib"

[dependencies.awkernel_services]
path = "../applications/awkernel_services"

[dependencies.test_pubsub]
path = "../applications/test_pubsub"
optional = true

[dependencies.test_network]
path = "../applications/test_network"
optional = true

[dependencies.load_test_udp]
path = "../applications/load_test_udp"
optional = true

[dependencies.test_rpi_hal]
path = "../applications/test_rpi_hal"
optional = true

[dependencies.test_graphics]
path = "../applications/test_graphics"
optional = true

[dependencies.test_prioritized_fifo]
path = "../applications/test_prioritized_fifo"
optional = true

[dependencies.test_rr]
path = "../applications/test_rr"
optional = true

[dependencies.test_priority_based_rr]
path = "../applications/test_priority_based_rr"
optional = true

[dependencies.test_async_mutex]
path = "../applications/test_async_mutex"
optional = true

[features]
default = ["load_test_udp"]
raspi = ["dep:test_rpi_hal"]
test_network = ["dep:test_network"]
test_pubsub = ["dep:test_pubsub"]
test_rpi_hal = ["dep:test_rpi_hal"]
test_graphics = ["dep:test_graphics"]
test_prioritized_fifo = ["dep:test_prioritized_fifo"]
test_rr = ["dep:test_rr"]
test_priority_based_rr = ["dep:test_priority_based_rr"]
test_async_mutex = ["dep:test_async_mutex"]
load_test_udp = ["dep:load_test_udp"]
