[package]
name = "vehicle_velocity_converter"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
heapless = "0.7"
awkernel_lib = { path = "../awkernel_lib", default-features = false }
awkernel_async_lib = { path = "../awkernel_async_lib", default-features = false }
imu_driver = { path = "../imu_driver", default-features = false }
