[package]
name = "autoware"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
log = "0.4"
libm = "0.2"
csv-core = "0.1"
awkernel_async_lib = { path = "../../awkernel_async_lib", default-features = false }
awkernel_lib = { path = "../../awkernel_lib", default-features = false }
common_types = { path = "./common_types", default-features = false }
imu_driver = { path = "./imu_driver", default-features = false }
imu_corrector = { path = "./imu_corrector", default-features = false }
vehicle_velocity_converter = { path = "./vehicle_velocity_converter", default-features = false }
gyro_odometer = { path = "./gyro_odometer", default-features = false}
ekf_localizer = { path = "./ekf_localizer", default-features = false}
localization_types = { path = "./localization_types", default-features = false }
stop_filter = { path = "./stop_filter", default-features = false }
twist2accel = { path = "./twist2accel", default-features = false }
trajectory_follower = { path = "./trajectory_follower", default-features = false }
