[package]
name = "awkernel_services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

[dependencies.awkernel_async_lib]
path = "../../awkernel_async_lib"
default-features = false

[dependencies.awkernel_lib]
path = "../../awkernel_lib"
default-features = false

[dependencies.awkernel_shell]
path = "../awkernel_shell"
default-features = false

[dependencies.awkernel_display]
path = "../awkernel_display"

[features]
perf = ["awkernel_shell/perf"]
test_nvme_fatfs_rw = []
test_nvme = []
test_nvme_fatfs = []
test_storage_async = []
test_storage_interrupt = []
test_nvme_namespace = []
