[package]
name = "awkernel_ydlidar_driver"
version = "0.1.0"
edition = "2021"

[features]
std = []

[dependencies.awkernel_lib]
path = "../../awkernel_lib"
default-features = false

[dependencies.awkernel_async_lib]
path = "../../awkernel_async_lib"
default-features = false

[dependencies.awkernel_drivers]
path = "../../awkernel_drivers"
default-features = false
features = ["aarch64", "raspi"]

[dependencies.ydlidar_signal_parser]
path = "../ydlidar_signal_parser"

[dependencies]
libm = "0.2.8"
embedded-hal-nb = "1.0"
embedded-hal = "1.0"
log = "0.4"
