[package]
name = "measure_channel_heavy"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
log = "0.4"

[dependencies.awkernel_async_lib]
path = "../../awkernel_async_lib"
default-features = false

[dependencies.awkernel_lib]
path = "../../awkernel_lib"
default-features = false

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["alloc"]
