[package]
name = "rd_gen_to_dags"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
yaml-peg = { version = "1.0.8", default-features = false, features = ["serde"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }

[dependencies.awkernel_lib]
path = "../../awkernel_lib"
default-features = false

[dependencies.awkernel_async_lib]
path = "../../awkernel_async_lib"
default-features = false

[features]
default = ["milliseconds"]

# Time Unit 
seconds = []
milliseconds = []
microseconds = []
nanoseconds = []

# For test
std = ["awkernel_lib/std", "awkernel_async_lib/std"]

