[package]
name = "test_rpi_hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

[dependencies.awkernel_async_lib]
path = "../../awkernel_async_lib"
default-features = false

[dependencies.awkernel_drivers]
path = "../../awkernel_drivers"
default-features = false
features = ["aarch64", "raspi"]

[dependencies.embedded-hal]
version = "1.0.0-rc.2"
