[package]
name = "velodyne_icp"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"

[dependencies.awkernel_async_lib]
path = "../../awkernel_async_lib"
default-features = false

[dependencies.velodyne_driver]
path = "../velodyne_driver"
default-features = false

[dependencies.ndarray]
version = "0.15.6"
default-features = false
