[package]
name = "velodyne_icp"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"

[features]
default = []
std = ["awkernel_async_lib/std"]

[dependencies.awkernel_async_lib]
path = "../../awkernel_async_lib"
default-features = false

[dependencies.velodyne_driver]
path = "../velodyne_driver"
default-features = false

[dependencies.icp]
path = "../icp"
default-features = false

[dependencies.ndarray]
version = "0.15.6"
default-features = false
