[package]
name = "command_gate"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
localization_types = { path = "../localization_types", default-features = false }
awkernel_lib = { path = "../../../awkernel_lib", default-features = false }
libm = "0.2"
heapless = "0.8"
