[package]
name = "trajectory_follower"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
localization_types = { path = "../localization_types", default-features = false }
nalgebra = { version = "0.32", default-features = false }
libm = "0.2"
awkernel_lib = { path = "../../../awkernel_lib", default-features = false }
